--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,12 @@
             <nav>
               <div class="header-flex-links">
                 <ul class="header-flex-links-list">
-                  <li><a class="link" href="#">Agencja</a></li>
-                  <li><a class="link is-active" href="portfolio.html">Portfolio</a></li>
+                  <li><a class="link" href="index.html">Agencja</a></li>
+                  <li>
+                    <a class="link is-active" href="portfolio.html"
+                      >Portfolio</a
+                    >
+                  </li>
                   <li><a class="link" href="#">Kontakt</a></li>
                 </ul>
               </div>
