fixing form in modal and newsletter

--- a/index.html
+++ b/index.html
@@ -532,25 +532,30 @@
         <!-- NEWSLETTER -->
 
         <div class="newsletter">
-          <h2 class="newsletter__title">Zapisz się do newslettera</h2>
-          <div class="newsletter__elements">
-            <input
-              type="email"
-              name="email-newsletter"
-              placeholder="E-mail"
-              class="newsletter__input"
-            />
-            <button type="submit" class="newsletter__button">
-              Zapisz się
-              <svg width="24" height="24" class="newsletter__svg">
-                <use
-                  width="24"
-                  height="24"
-                  href="./images/icons/icons.svg#icon-telegram"
-                ></use>
-              </svg>
-            </button>
-          </div>
+          <!-- <h2 class="newsletter__title">Zapisz się do newslettera</h2> -->
+          <form>
+            <label class="newsletter__title" for="email-newsletter"
+              >Zapisz się do newslettera</label
+            >
+            <div class="newsletter__elements">
+              <input
+                type="email"
+                name="email-newsletter"
+                placeholder="E-mail"
+                class="newsletter__input"
+              />
+              <button type="submit" class="newsletter__button">
+                Zapisz się
+                <svg width="24" height="24" class="newsletter__svg">
+                  <use
+                    width="24"
+                    height="24"
+                    href="./images/icons/icons.svg#icon-telegram"
+                  ></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </footer>
