add required to inputs

--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@
                 name="email-newsletter"
                 placeholder="E-mail"
                 class="newsletter__input"
+                required
               />
               <button type="submit" class="newsletter__button">
                 Zapisz się
@@ -582,6 +583,7 @@
                 name="name"
                 id="user_name"
                 class="form__input"
+                required
               />
             </div>
 
@@ -601,6 +603,7 @@
                 name="tel-number"
                 id="user_telephone"
                 class="form__input"
+                required
               />
             </div>
 
@@ -619,6 +622,7 @@
                 name="email"
                 id="user_email"
                 class="form__input"
+                required
               />
             </div>
 
@@ -639,6 +643,7 @@
                   name="regulations"
                   id="checkbox"
                   class="input"
+                  required
                 />
                 <svg width="16" height="15" class="form__icon--agree">
                   <use
